--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   get: ^4.6.6
   cached_network_image: ^3.3.1
   dropdown_button2: ^2.3.9
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
