--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cached_network_image: ^3.3.1
   dropdown_button2: ^2.3.9
   jwt_decoder: ^2.0.1
+  intl: ^0.19.0
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
